# PROJECTIQ

./: app.py  pyproject.toml  terminal.py
chroma_db/: chroma.sqlite3
data/: Approval Required – Pawfect Mart UI_UX Designs.msg  Meeting 1 Project Kickoff.txt  Meeting 2 Design Review.txt  Meeting 3 UAT Review.txt  Pawfect Mart -BRD.docx  Pawfect Mart Project Plan.xlsx  Subject_ Pawfect Mart Website – Project Kickoff Meeting.msg  UAT Sign-Off Required – Pawfect Mart Website.msg  Weekly Project Status Update – Pawfect Mart Website.msg
src/: database.py  ingestion.py  loaders.py
